Fixed Book Covers Not Rendering With Correct Size
Book Cover Images Now Expand, maintain aspect ratio, and do not compress

--- a/src/routes/Home/Home.module.scss
+++ b/src/routes/Home/Home.module.scss
@@ -266,10 +266,12 @@ $bookRadius: 5px;
 }
 
 .bookImage{
-  object-fit: revert-layer;
+  object-fit: cover;
   align-self: flex-end;
   width:100%;
-  max-height: 100%;
+  // It seems like a recent webview update broke this line. Commenting it out seems to fix the issue, not sure why I added max-height in the first place
+  // Proof this is a chromium bug is checking and unchecking the property makes the incorrect image height/squished image fix itself.
+  // max-height: calc(100%) !important;
   grid-row: 1/3;
   grid-column: 1;
   border-radius: $bookRadius;
